--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,111 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="fundo" [fullscreen]="true">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="espaco">
+    <ion-row style="margin-top: 30px;">
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">CEP <span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="00000-000"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Número<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Exemplo: 1000"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Complemento<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Casa/Apartamento nº"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Rua<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Ex: Avenida dos Sonhos"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Bairro<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Exemplo: Batel"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Cidade<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Exemplo: Curitiba "></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+        <ion-item class ="roundedInput" line="none">
+          <ion-label position = "floating">Estado<span 
+          style="color: red;">*</span></ion-label>
+          <ion-input 
+          type="text" 
+          expand="block" 
+          style="color:#222;"
+          placeholder="Exemplo: PR(UF)"></ion-input>
+        </ion-item>
+    </ion-col>
+  </ion-row>
+</div>
 </ion-content>
+
+<ion-footer>
+  <ion-row>
+    <ion-col>
+      <ion-button shape="block" color="success" 
+      >Cadastrar</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-footer>
